--- a/src/app/main/navbar/navbar.component.scss
+++ b/src/app/main/navbar/navbar.component.scss
@@ -3,108 +3,107 @@
 
 body {
 
-    &.fuse-sidebar-folded {
+  &.fuse-sidebar-folded {
 
-        .content-wrapper {
+    .content-wrapper {
 
-            &:last-child {
-                padding-left: 64px !important;
-            }
+      &:last-child {
+        padding-left: 64px !important;
+      }
 
-            &:first-child {
-                padding-right: 64px !important;
-            }
+      &:first-child {
+        padding-right: 64px !important;
+      }
 
-            &:first-child:last-child {
-                padding-left: 0 !important;
-                padding-right: 0 !important;
-            }
+      &:first-child:last-child {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+      }
 
-        }
     }
+  }
 }
 
 fuse-sidebar {
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.35);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.35);
 
-    &.folded:not(.unfolded) {
+  &.folded:not(.unfolded) {
 
-        .navbar-vertical {
+    .navbar-vertical {
 
-            .navbar-header {
-                padding: 0 13px;
+      .navbar-header {
+        padding: 0 13px;
 
-                .logo {
+        .logo {
 
-                    .logo-text {
-                        opacity: 0;
-                        transition: opacity 200ms ease;
-                    }
-                }
-            }
+          .logo-text {
+            opacity: 0;
+            transition: opacity 200ms ease;
+          }
         }
+      }
     }
+  }
 }
 
 fuse-navbar {
 
-    &:not(.top-navbar) {
-        height: 100%;
-    }
+  &:not(.top-navbar) {
+    height: 100%;
+  }
 
-    .navbar-vertical {
+  .navbar-vertical {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+
+    .navbar-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 64px;
+      min-height: 64px;
+      padding: 0 16px 0 24px;
+      transition: padding 200ms ease;
+      background-color: map-get($colors, primary-red);
+      @include mat-elevation(1);
+
+      .logo {
         display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 100%;
+        align-items: center;
 
-        .navbar-header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            height: 64px;
-            min-height: 64px;
-            padding: 0 16px 0 24px;
-            transition: padding 200ms ease;
-            background-color: map-get($colors,primary-red);
-            @include mat-elevation(1);
-
-            .logo {
-                display: flex;
-                align-items: center;
-
-                .logo-icon {
-                    width: 70px;
-                    height: 31px;
-                }
-
-                .logo-text {
-                    margin-left: 8px;
-                    font-size: 20px;
-                    font-weight: 300;
-                    letter-spacing: 0.4px;
-                }
-            }
-            .small-top{
-                font-size: 12px;
-            }
+        .logo-icon {
+          width: 160px; // height: 31px;
         }
 
-        .navbar-content {
-            flex: 1;
-            background-color: #222222;
+        .logo-text {
+          margin-left: 8px;
+          font-size: 20px;
+          font-weight: 300;
+          letter-spacing: 0.4px;
         }
+      }
+
+      .small-top {
+        font-size: 12px;
+      }
     }
+
+    .navbar-content {
+      flex: 1;
+      background-color: #222222;
+    }
+  }
 }
 
-.top-navbar + #wrapper {
+.top-navbar+#wrapper {
 
-    & > .left-navbar {
-        display: none !important;
+  &>.left-navbar {
+    display: none !important;
 
-        @include media-breakpoint-down(md) {
-            display: flex !important;
-        }
+    @include media-breakpoint-down(md) {
+      display: flex !important;
     }
+  }
 }
-
