--- a/src/app/pages/500/access-denied.component.html
+++ b/src/app/pages/500/access-denied.component.html
@@ -3,7 +3,7 @@
   <div class="content" fxLayout="column" fxLayoutAlign="center center">
 
     <div class="error-code" style="margin-bottom: 50px;">
-      <img src="assets/images/ayo/AYO-logo.png" srcset="assets/images/ayo/AYO-logo@2x.png 2x" />
+      <img src="assets/images/ayo/AYO_SRC_(Master).png" srcset="assets/images/ayo/AYO_SRC_(Master)@2x.png 2x" />
     </div>
     <div class="error-code">500</div>
 
