--- a/src/app/pages/dte/template/index/template-index.component.html
+++ b/src/app/pages/dte/template/index/template-index.component.html
@@ -53,7 +53,7 @@
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="button-row" style="margin-left: -10px">
               <button mat-icon-button color="" matTooltip="Duplikat" (click)="duplicate(row)">
-                <mat-icon class="secondary-text">filter_none</mat-icon>
+                <mat-icon class="secondary-text">content_copy</mat-icon>
               </button>
               <button mat-icon-button color="" matTooltip="Ubah" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
