--- a/src/global.scss
+++ b/src/global.scss
@@ -952,9 +952,9 @@ a {
 }
 
 
-a[href="https://froala.com/wysiwyg-editor"],
-a[href="https://www.froala.com/wysiwyg-editor?k=u"] {
-  display: none !important;
-  position: absolute;
-  top: -99999999px;
-}
+// a[href="https://froala.com/wysiwyg-editor"],
+// a[href="https://www.froala.com/wysiwyg-editor?k=u"] {
+//   display: none !important;
+//   position: absolute;
+//   top: -99999999px;
+// }
