froala key & change validate selected age

--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -106,7 +106,7 @@
             </mat-radio-group>
           </div>
 
-          <div class="pb-16">
+          <div class="pb-16" *ngIf="formNotification.controls['user_group'].value === 'customer'">
             <div class="pt-16" fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
                 <strong>Batasan Umur</strong>
